--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
         run: pnpm run test:unit
 
       - name: Build
-        run: pnpm run build
+        run: pnpm run build -- --mode gh-pages
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
